k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: posts-api
  labels:
    app.kubernetes.io/name: posts-api
