k8s/05-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: posts-api
  namespace: posts-api
  labels:
    app.kubernetes.io/name: posts-api
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: posts-api
  ports:
    - name: http
      port: 80
      targetPort: http
